# arknights-toolkit

./: .gitignore  README.md  exam_download_and_update.py  exam_gacha.py  generate_pool.py  pyproject.toml  test.py  test_download_and_update.py  test_gacha.py  test_guess.py  test_random.py  test_record.py
.github/workflows/: release.yml
arknights_kit/: __init__.py  random_operator.py
arknights_kit/gacha/: __init__.py  update.py
arknights_toolkit/: __init__.py  copper.py  images.py  img_resource.py  info.py  init.py  random_operator.py  recruit.py  wordle.py
arknights_toolkit/cli/: __init__.py  __main__.py
arknights_toolkit/cli/plugins/: clear.py  init.py  update.py
arknights_toolkit/gacha/: __init__.py  download.py  main.py  model.py  simulate.py  update.py
arknights_toolkit/record/: database.py  drawer.py  main.py  style.py
arknights_toolkit/resource/: default_gacha.json  operator_template.json
arknights_toolkit/resource/copper/: copper_table.json
arknights_toolkit/resource/gacha/: default_gacha.json
arknights_toolkit/resource/record/: pool_info.json
arknights_toolkit/resource/wordle/: relations.json
arknights_toolkit/update/: gacha.py  main.py  record.py
arknights_toolkit/update/gacha/: data.py  info.py  main.py  model.py
graiax/arkkit/gacha/: main.py  model.py  sim.py  update.py
graiax/arknights_kit/: __init__.py  randomo.py  recruiment.py
graiax/arknights_kit/gacha/: __init__.py  main.py  sim.py  update.py
