[project]
name = "arknights-toolkit"
description = "Arknights-related Toolkit"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "Pillow>=10.1.0",
    "httpx!=0.25.1",
    "loguru>=0.7.2",
    "lxml>=4.9.3",
    "matplotlib>=3.7.3",
    "cli-lite>=0.7.1",
    "msgpack>=1.0.7",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "AGPL-3.0"}
dynamic = ["version"]

[project.urls]
repository = "https://github.com/RF-Tar-Railt/arknigths-toolkit"

[project.scripts]
arkkit = "arknights_toolkit.cli.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
]

[tool.pdm.build]
includes = ["arknights_toolkit"]
excludes = [
    "arknights_toolkit/resource/ops_initialized",
    "arknights_toolkit/resource/careers.json",
    "arknights_toolkit/resource/operators/*"
]

[tool.pdm.version]
source = "file"
path = "arknights_toolkit/__init__.py"