[project]
name = "arknights-toolkit"
description = "Arknights-related Toolkit"
authors = [
    {name = "RF-Tar-Railt", email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "Pillow>=10.2.0",
    "httpx<1.0.0,>=0.26.0",
    "loguru>=0.7.2",
    "lxml>=5.1.0",
    "matplotlib>=3.7.5",
    "cli-lite>=0.10.0",
    "msgpack>=1.0.8",
    "ujson>=5.9.0",
    "selectolax>=0.3.31",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL-3.0"}
dynamic = ["version"]

[project.urls]
repository = "https://github.com/RF-Tar-Railt/arknights-toolkit"

[project.scripts]
arkkit = "arknights_toolkit.cli.__main__:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=24.2.0",
    "isort>=5.13.2",
]

[tool.pdm.build]
includes = ["arknights_toolkit"]
excludes = [
    "arknights_toolkit/resource/ops_initialized",
    "arknights_toolkit/resource/info.json",
    "arknights_toolkit/resource/operators/*"
]

[tool.pdm.version]
source = "file"
path = "arknights_toolkit/__init__.py"

[tool.black]
line-length = 110
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 110
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]
